--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "build": "tsc",
     "start": "yarn build && node dist/src/index.js",
     "dev": "ts-node src/index.ts",
+    "lint": "eslint ./src ./test --ext .ts",
+    "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Matheus Gomes",
@@ -15,9 +17,12 @@
     "module-alias": "^2.2.3"
   },
   "devDependencies": {
-    "@types/module-alias": "^2.0.4",
-    "@types/node": "^20.14.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "@types/module-alias": "^2.0.1",
+    "@types/node": "16",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
+    "eslint": "^8.5.0",
+    "typescript": "^4.5.4",
+    "ts-node": "^10.9.2"
   }
 }
