--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "build": "tsc",
     "start": "yarn build && node dist/src/index.js",
-    "dev": "ts-node src/index.ts",
+    "start:local": "ts-node-dev --transpile-only src/index.ts",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:e2e": "jest --projects ./test --forceExit --runInBand"
   },
   "author": "Matheus Gomes",
   "license": "ISC",
@@ -17,12 +17,17 @@
     "module-alias": "^2.2.3"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.3",
     "@types/module-alias": "^2.0.1",
     "@types/node": "16",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "eslint": "^8.5.0",
-    "typescript": "^4.5.4",
-    "ts-node": "^10.9.2"
+    "jest": "^27.4.5",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.1.2",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.4"
   }
 }
