--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "style:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'",
     "style:fix": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
+    "test:unit": "jest",
     "test:functional": "jest --projects ./test --forceExit --runInBand"
   },
   "author": "Matheus Gomes",
@@ -17,21 +18,23 @@
   "description": "",
   "dependencies": {
     "@overnightjs/core": "^1.7.6",
-    "@types/express": "^4.17.13",
+    "axios": "^0.24.0",
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "module-alias": "^2.2.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/axios": "0.14.0",
     "@types/jest": "^27.0.3",
     "@types/module-alias": "^2.0.1",
     "@types/node": "16",
-    "prettier": "^2.5.1",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "eslint": "^8.5.0",
     "jest": "^27.4.5",
+    "prettier": "^2.5.1",
     "supertest": "^6.1.6",
     "ts-jest": "^27.1.2",
     "ts-node-dev": "^1.1.8",
