--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@overnightjs/core": "^1.7.6",
     "axios": "^0.24.0",
     "body-parser": "^1.19.1",
+    "config": "^3.3.6",
     "express": "^4.17.2",
     "module-alias": "^2.2.2"
   },
   "devDependencies": {
+    "@types/config": "^0.0.40",
     "@types/express": "^4.17.13",
     "@types/axios": "0.14.0",
     "@types/jest": "^27.0.3",
